# municipal-ai-os

./: .gitignore  README_DASHBOARD.md  README_UPLOAD.md  pyproject.toml  requirements.txt
config/: collector_performance_rules.json  field_activity_rules.json  financial_rules.json  municipal_mission_rules.json  organization_model.json  snapshot_comparison_rules.json
data/beta/region_1/: README.md
data/beta/region_1/inbox/: صادره 1405 کسب و پیشه منطقه یک.xlsx
docs/: autonomous_collection_agent.md  daily_work_assignment_engine.md  etl_excel_import.md  ubuntu_deployment.md
docs/beta/: region_1_beta_test.md  region_1_real_data_runbook.md
src/municipal_ai_os/: __init__.py  __main__.py  collection_agent.py  daily_work_assignment.py  field_activity_attribution.py  financial_intelligence.py  multi_agent_system.py  municipal_mission_engine.py  municipal_mission_rules.json  organization_engine.py
src/shahrdari_ai/: auth.py  upload_app.py
src/shahrdari_ai/etl/: __main__.py  engine.py  models.py
tests/: test_auth_app.py  test_collection_agent.py  test_daily_work_assignment.py  test_dashboard_app.py  test_etl_engine.py  test_field_activity_attribution.py  test_financial_intelligence.py  test_multi_agent_system.py  test_municipal_mission_engine.py  test_organization_engine.py  test_upload_app.py
