[project]
name = "municipal-ai-os"
version = "0.1.0"
description = "Municipal AI OS autonomous collection agent"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.0",
  "pandas>=2.0.0",
  "SQLAlchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "fastapi>=0.110.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.27.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
